--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1688,6 +1688,14 @@ else
     export_dynamic_flag_spec='-Bexport'
     ;;
 
+  sysv5)
+    archive_cmds='$LD -G -h $soname -o $lib $libobjs $deplibs
+$linker_flags'
+    runpath_var='LD_RUN_PATH'
+    hardcode_shlibpath_var=no
+    hardcode_direct=no
+    ;;
+
   uts4*)
     archive_cmds='$LD -G -h $soname -o $lib $libobjs $deplibs $linker_flags'
     hardcode_libdir_flag_spec='-L$libdir'
