--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1465,7 +1465,7 @@ EOF
       ;;
     *)
       # ancient GNU ld didn't support --whole-archive et. al.
-      if $LD --help 2>71 | egrep 'no-whole-archive' > /dev/null; then
+      if $LD --help 2>&1 | egrep 'no-whole-archive' > /dev/null; then
         whole_archive_flag_spec="$wlarc"'--whole-archive$convenience '"$wlarc"'--no-whole-archive'
       else
         whole_archive_flag_spec=
