--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2072,6 +2072,7 @@ sco3.2v5*)
   soname_spec='${libname}${release}.so$major'
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major $libname.so'
   shlibpath_var=LD_LIBRARY_PATH
+  deplibs_check_method=pass_all
   ;;
 
 solaris*)
