* configure.in (AC_OUTPUT_COMMANDS): generate ltmain.sh * Makefile.am (ltmain.sh ltconfig): removed.  Automake inserts the rules to automatically call config.status.

--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,7 @@ AM_INIT_AUTOMAKE(libtool, 1.3c)
 # This is a sanity check so we can see which version is used in bug reports.
 # It is assumed that we only want to see the date extension for cvs libtool
 # versions (i.e. "odd" letters) and not actual alpha releases.
+TIMESTAMP=
 case "$VERSION" in
 changequote(,)
   *[acegikmoqsuwy]) 
@@ -23,6 +24,7 @@ changequote([,])
     echo
     ;;
 esac    
+AC_SUBST(TIMESTAMP)
 
 pkgdatadir='${datadir}'"/${PACKAGE}"
 AC_SUBST(pkgdatadir) dnl automake does not need this, but libtoolize does
@@ -71,9 +73,52 @@ AC_SUBST(ACINCLUDE_M4_LIST)
 AC_SUBST(DIST_MAKEFILE_LIST)
 
 AC_OUTPUT_COMMANDS([
-  test -f ${saved_top_srcdir}/ltmain.sh || ${MAKE-make} ${saved_top_srcdir}/ltmain.sh
-], [saved_top_srcdir=${srcdir}])
-AC_OUTPUT([ltconfig Makefile doc/Makefile tests/Makefile])
+  if test -n "$CONFIG_FILES" && test -n "$CONFIG_HEADERS"; then
+    # If both these vars are non-empty, then config.status wasn't run by
+    # automake rules (which always set one or the other to empty).
+    CONFIG_OTHER=${CONFIG_OTHER-ltconfig ltmain.sh}
+  fi
+  case "$CONFIG_FILES" in
+  *ltconfig*)
+    infile=ltconfig.in
+    outfile=ltconfig
+    tmpfile=${outfile}T
+
+    ( cd $top_srcdir
+      rm -f $tmpfile
+      ${AWK} '
+        /@LINENO@/	{ sub("@LINENO@", NR); }
+                 	{ print; }
+      ' $outfile > $tmpfile
+
+      chmod +x $tmpfile
+      rm -f $outfile
+      mv -f $tmpfile $outfile || \
+      (rm -f $outfile && cp $tmpfile $outfile && rm -f $tmpfile)
+    )
+    ;;
+
+  *ltmain.sh*)
+    infile=$top_srcdir/ltmain.in
+    outfile=$top_srcdir/ltmain,sh
+    tmpfile=${outfile}T
+
+    ( cd $top_srcdir
+      rm -f $tmpfile
+      ${AWK} '
+        /@LINENO@/	{ sub("@LINENO@", NR); }
+                   	{ print; }
+      ' $outfile > $tmpfile
+
+      rm -f $outfile
+      mv -f $tmpfile $outfile || \
+      (rm -f $outfile && cp $tmpfile $outfile && rm -f $tmpfile)
+    )
+    ;;
+  esac
+], [top_srcdir=$srcdir; AWK=$AWK])
+
+AC_OUTPUT([Makefile doc/Makefile tests/Makefile  $srcdir/ltconfig:ltconfig.in $srcdir/ltmain.sh:ltmain.in])
 
 # Local Variables:
 # mode:shell-script
