* NEWS: new -no-install flag * configure.in: fix typo * doc/libtool.texi(Link mode): document -no-install flag,   correct -no-fast-install docs * libtool.m4: check for "file" command * ltconfig.in: don't hardcode /usr/bin/file, remove second   definition of sysv5, replace linkopts -> linker_flags * ltmain.in: add new -no-install flag, print help for -no-install   and -no-fast-install flags
* ltmain.in: always create output_objdir


* libltdl/Makefile.am: don't preserve file attributes when
  installing the libltdl sources

--- a/configure.in
+++ b/configure.in
@@ -100,7 +100,7 @@ AC_OUTPUT_COMMANDS([
 
   *ltmain.sh*)
     infile=$top_srcdir/ltmain.in
-    outfile=$top_srcdir/ltmain,sh
+    outfile=$top_srcdir/ltmain.sh
     tmpfile=${outfile}T
 
     ( cd $top_srcdir
