* ltmain.in (-no-fast-install):  Wrapper script used to add the exeext on again when naming the wrapped executable.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2870,7 +2870,7 @@ else
   fi"
 	else
 	  echo >> $output "\
-  program='$outputname$exeext'
+  program='$outputname'
   progdir=\"\$thisdir/$objdir\"
 "
 	fi
