--- a/ltmain.in
+++ b/ltmain.in
@@ -3567,7 +3567,7 @@ else
   fi"
 	else
 	  echo >> $output "\
-  program='$outputname$exeext'
+  program='$outputname'
   progdir=\"\$thisdir/$objdir\"
 "
 	fi
