--- a/ltconfig.in
+++ b/ltconfig.in
@@ -570,7 +570,7 @@ else
     ac_cv_prog_cc_static='-static'
 
     case "$host_os" in
-    beos* | irix5* | irix6* | osf3* | osf4*)
+    beos* | irix5* | irix6* | osf3* | osf4* | osf5*)
       # PIC is the default for these OSes.
       ;;
     aix*)
@@ -629,7 +629,7 @@ else
       ac_cv_prog_cc_pic='-DDLL_EXPORT'
       ;;
 
-    osf3* | osf4*)
+    osf3* | osf4* | osf5*)
       # All OSF/1 code is PIC.
       ac_cv_prog_cc_wl='-Wl,'
       ac_cv_prog_cc_static='-non_shared'
@@ -1293,7 +1293,7 @@ else
     old_archive_from_new_cmds='emximp -o $objdir/$libname.a $objdir/$libname.def'
     ;;
 
-  osf3* | osf4*)
+  osf3* | osf4* | osf5*)
     if test "$with_gcc" = yes; then
       allow_undefined_flag=' ${wl}-expect_unresolved ${wl}\*'
       archive_cmds='$CC -shared${allow_undefined_flag} $libobjs $deplibs $compiler_flags ${wl}-soname ${wl}$soname `test -n "$verstring" && echo ${wl}-set_version ${wl}$verstring` ${wl}-update_registry ${wl}${objdir}/so_locations -o $lib'
@@ -1704,7 +1704,7 @@ os2*)
   shlibpath_var=LIBPATH
   ;;
 
-osf3* | osf4*)
+osf3* | osf4* | osf5*)
   version_type=osf
   need_version=no
   soname_spec='${libname}${release}.so'
